KANBAN-529: style and content updates to fix footer layout issues.

--- a/src/containers/layout/style.module.scss
+++ b/src/containers/layout/style.module.scss
@@ -75,6 +75,10 @@
     color: white;
   }
 
+  > div {
+    white-space: nowrap;
+  }
+
   .footerLogo {
     margin-right: 2rem;
     margin-bottom: 1rem;
